# bazel-cpp-sandbox

./: README.md  WORKSPACE.bazel
benchmark/: BUILD.bazel  benchmark_test.cc
lib/: BUILD.bazel  word_generator.cc  word_generator.h
main/: BUILD.bazel  main.cc
test/: BUILD.bazel  word_generator_test.cc
